# data-engineer-skill-test

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  test_main.http
.github/workflows/: ci.yml
data/: transactions_fr.csv
infra/grafana/dashboards/: ingest-dashboard.json  logs-dashboard.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/kafka/schema-registry/: dlqs_v1.avsc  transactions_v1.avsc
infra/kafka/scripts/: init-kafka-topics.sh  register-schemas.sh
infra/loki/: config.yml
infra/pgadmin/: pgpass  servers.json
infra/prometheus/: prometheus.yml
infra/promtail/: config.yml
ml_api/: Dockerfile
ml_api/src/: main.py  models.py
notebooks/: eda.ipynb
pipelines/: config.py  logging.py
pipelines/alembic/versions/: a74acd1e70a4_create_transactions_table.py
pipelines/csv/: main.py  reader.py
pipelines/db/: models.py  repository.py
pipelines/kafka/consumer/: main.py
pipelines/kafka/producer/: main.py
pipelines/kafka/producers/: dlq.py
pipelines/observability/: http_app.py  metrics.py  utils.py
pipelines/scripts/: csv.py
pipelines/scripts/kafka/: consumer.py  producer.py
pipelines/services/: backoff.py  batch_ingest.py  csv.py  errors.py  ml_api.py  models.py  protocols.py  quality.py  utils.py  validator.py
tests/db/: test_repository.py  test_repository_integration.py
tests/functional/: test_consumer.py  test_csv.py
tests/pipelines/csv/: test_reader.py
tests/services/: test_consumer_entrypoint.py  test_csv_ingest_service.py  test_csv_service_e2e.py  test_kafka_service.py  test_kafka_service_e2e.py  test_ml_api.py  test_quality.py  test_transaction_ingest_service.py  test_transaction_validator.py  test_utils.py
