[project]
name = "qonto-data-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.45",
]
