[project]
name = "qonto-data-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=25.5.0",
    "testcontainers[postgresql]>=4.13.3",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "httpx>=0.28.1",
    "kafka-python>=2.3.0",
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.251219",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "testcontainers[postgresql]>=4.13.3",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiokafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kafka.*"
ignore_missing_imports = true

[tool.pyright]
reportMissingTypeStubs = false
